Fix problem of bonux question box growing too wide

--- a/app/css/ball.css
+++ b/app/css/ball.css
@@ -186,7 +186,7 @@ div.del:hover, div.del:active {background-position:left bottom;}
 	color:#FFFFCC;
 }
 
-#round{width:600px;}
+/*#round{width:600px;}*/
 
 textarea#question{height:140px;}
 #bonuscomment{height:220px;}
